podinfo/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-app-1
  namespace: podinfo
spec:
  hostnames:
  - whoami.local
  parentRefs:
  - name: http-gateway
    namespace: kube-system
  rules:
    - backendRefs:
      - name: podinfo
        port: 9898
