podinfo/https-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: https-route
    namespace: podinfo
spec:
    #  hostnames:
    #  - example.com
    hostnames:
        - ENC[AES256_GCM,data:NH1mIKl9H+5rJWlN,iv:QvnUlM3CvfLjeaxKZnwkjo2NzjFfcCrAZ0y/nNf9FEU=,tag:s4ipOh58Pnm89jhaPlNm6g==,type:str]
        - ENC[AES256_GCM,data:+bC0iDSc2oAG3F0AKeE6sPK62NM=,iv:4SjDZEzwY+1+L7fuZeXzLP9m/IsLjEu2n2esXo6HqW8=,tag:xSRwcqn+8Dfx1++B7XaF7g==,type:str]
    parentRefs:
        - name: http-gateway
          sectionName: https
          namespace: kube-system
    rules:
        - backendRefs:
            - name: podinfo
              port: 9898
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age: []
    lastmodified: "2025-02-06T20:28:29Z"
    mac: ENC[AES256_GCM,data:M2UDyRVJw+xo+bFNtHvjS6r9kZdXUE1ytah0Ryfv4rY7JFz3gX9R0xPeTPknp156SVHQcOCOMsbsEq4NJpk7VcaDaBfhlx+JWGIF2jdp31AX3Oq65hnwodJqv78cHx73Qdfb+n083FW62iZfhrh/P+13KXKQeEPWoix9rbtVbSI=,iv:53TBkuE9lUekxVj9GKctFwPrN6JGZ2Nz/3z4zxUqWT4=,tag:OpiaTcCfFXGikhvDZAoPAw==,type:str]
    pgp:
        - created_at: "2025-01-31T00:39:55Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA262vqLG74HEAQ/8CnVZz2DrdjaeClxNOdBLV0q9daPNp6ogdiVS21UOu1tr
[...]
            SP0JhpuIGg==
            =f2m1
            -----END PGP MESSAGE-----
          fp: 75305C71C2CBD1BB31E45BC9EB711729A929833C
    encrypted_regex: hostnames
    version: 3.9.1
